--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
   "main": "dist/grapesjs-mjml.min.js",
   "scripts": {
     "lint": "eslint src",
-    "build": "WEBPACK_ENV=prod && npm run v:patch && webpack",
+    "build": "WEBPACK_ENV=prod && webpack",
     "v:patch": "npm version --no-git-tag-version patch",
-    "start": "WEBPACK_ENV=dev ./node_modules/.bin/webpack-dev-server --progress --colors"
+    "start":
+      "WEBPACK_ENV=dev ./node_modules/.bin/webpack-dev-server --progress --colors"
   },
-  "keywords": [
-    "grapesjs",
-    "plugin",
-    "mjml",
-    "wysiwyg"
-  ],
+  "keywords": ["grapesjs", "plugin", "mjml", "wysiwyg"],
   "author": "Artur Arseniev",
   "license": "BSD-3-Clause",
   "devDependencies": {
@@ -23,8 +19,9 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-3": "^6.24.1",
     "eslint": "^3.2.2",
-    "grapesjs": "^0.5.37",
+    "grapesjs": "^0.10.7",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
